Completed image feature extraction and matching using SIFT and KnnMatch

--- a/image_stitching.ipynb
+++ b/image_stitching.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -76,7 +76,7 @@
     "kp_a, dist_a = sift.detectAndCompute(img_left_gray, None)\n",
     "kp_b, dist_b = sift.detectAndCompute(img_right_gray, None)\n",
     "\n",
-    "cv2.imshow(\"Feature point matching\", cv2.drawKeypoints(img_left, kp_a, None))\n",
+    "cv2.imshow(\"Feature point\", cv2.drawKeypoints(img_left, kp_a, None))\n",
     "cv2.waitKey(0)\n",
     "\n",
     "# 构造BFMatcher()蛮力匹配，匹配sift特征向量距离最近对应组分\n",
@@ -95,7 +95,7 @@
     "\n",
     "# imageA和imageB表示图片，kpsA和kpsB表示关键点， matches表示进过cv2.BFMatcher获得的匹配的索引值，也有距离， flags表示有几个图像\n",
     "img3 = cv2.drawMatches(img_left, kp_a, img_right, kp_b, good_points, None, flags = 2)\n",
-    "cv2.imshow(\"dsaf\",img3)\n",
+    "cv2.imshow(\"Feature point matching\",img3)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n"
    ]
