--- a/Image_mosaics.ipynb
+++ b/Image_mosaics.ipynb
@@ -41,9 +41,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "(2736, 3648, 3)\n(547, 730, 3)\n"
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "-1"
+     },
+     "metadata": {},
+     "execution_count": 1
     }
    ],
    "source": [
@@ -59,18 +62,25 @@
     "# Read the pictures that needed to solve\n",
     "origin_img_l = cv2.imread(picl_name) \n",
     "img_left = cv2.resize(origin_img_l, (0,0), fx=0.2, fy=0.2)\n",
-    "img_left_gray = cv2.cvtColor(img_left, cv2.COLOR_BGR2GRAY)\n",
+    "img_left_gray = cv2.cvtColor(img_left, cv2.COLOR_RGB2GRAY)\n",
     "\n",
     "origin_img_r = cv2.imread(picr_name)\n",
     "img_right = cv2.resize(origin_img_r, (0,0), fx=0.2, fy=0.2)\n",
-    "img_right_gray = cv2.cvtColor(img_right, cv2.COLOR_BGR2GRAY)\n",
+    "img_right_gray = cv2.cvtColor(img_right, cv2.COLOR_RGB2GRAY)\n",
     "\n",
-    "print(origin_img_l.shape)\n",
-    "print(img_left.shape)\n",
+    "# print(origin_img_l.shape)\n",
+    "# print(img_left.shape)\n",
     "cv2.imshow(\"Boat_left\", img_left)\n",
     "cv2.imshow(\"Boat_right\", img_right)\n",
-    "cv2.waitKey(0)\n",
-    "\n",
+    "cv2.waitKey(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sift = cv2.xfeatures2d.SIFT_create()\n",
     "# find the key points and descriptors with SIFT\n",
     "kp_a, dist_a = sift.detectAndCompute(img_left_gray, None)\n",
@@ -78,7 +88,15 @@
     "\n",
     "cv2.imshow(\"Feature point\", cv2.drawKeypoints(img_left, kp_a, None))\n",
     "cv2.waitKey(0)\n",
-    "\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 构造BFMatcher()蛮力匹配，匹配sift特征向量距离最近对应组分\n",
     "match = cv2.BFMatcher()\n",
     "matches = match.knnMatch(dist_a, dist_b, k=2)\n",
@@ -102,25 +120,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "MIN_MATCH_COUNT = 10\n",
-    "if len(good) > MIN_MATCH_COUNT:\n",
-    "    src_pts = np.float32([ kp1[m.queryIdx].pt for m in good ]).reshape(-1,1,2)\n",
-    "    dst_pts = np.float32([ kp2[m.trainIdx].pt for m in good ]).reshape(-1,1,2)\n",
+    "if len(good_points) > MIN_MATCH_COUNT:\n",
+    "    dst_pts = np.float32([kp_a[m.queryIdx].pt for m in good_points]).reshape(-1,1,2)\n",
+    "    src_pts = np.float32([kp_b[m.trainIdx].pt for m in good_points]).reshape(-1,1,2)\n",
+    "    # 在这个函数参数中，输入的m1和m2是两个对应的序列，这两组序列的每一对数据一一匹配，其中既有正确的匹配，也有错误的匹配，\n",
+    "    # 正确的可以称为内点，错误的称为外点，RANSAC方法就是从这些包含错误匹配的数据中，分离出正确的匹配，并且求得单应矩阵。\n",
     "    M, mask = cv2.findHomography(src_pts, dst_pts, cv2.RANSAC, 5.0)\n",
-    "    h,w = img_left_gray.shape\n",
+    "    h,w = img_right_gray.shape\n",
     "    pts = np.float32([ [0,0],[0,h-1],[w-1,h-1],[w-1,0] ]).reshape(-1,1,2)\n",
     "    dst = cv2.perspectiveTransform(pts, M)\n",
-    "    img_right_gray = cv2.polylines(img_right_gray,[np.int32(dst)],True,255,3, cv2.LINE_AA)\n",
-    "    #cv2.imshow(\"original_image_overlapping.jpg\", img2)\n",
+    "    img_left_gray = cv2.polylines(img_left_gray,[np.int32(dst)],True,0,3, cv2.LINE_AA)\n",
+    "    cv2.imshow(\"original_image_overlapping.jpg\", img_left_gray)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
     "else:\n",
     "    print(\"Not enought matches are found - %d/%d\", (len(good)/MIN_MATCH_COUNT))\n",
-    "dst = cv2.warpPerspective(img_left,M,(img_right.shape[1] + img_left.shape[1], img_right.shape[0]))\n",
+    "\n",
+    "dst = cv2.warpPerspective(img_right,M,(img_right.shape[1] + img_left.shape[1], img_left.shape[0]))\n",
+    "cv2.imshow(\"original_image_stitched.jpg\", dst)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
     "dst[0:img_left.shape[0],0:img_left.shape[1]] = img_left\n",
     "cv2.imshow(\"original_image_stitched.jpg\", dst)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def trim(frame):\n",
     "    #crop top\n",
     "    if not np.sum(frame[0]):\n",
@@ -136,9 +172,16 @@
     "        return trim(frame[:,:-2])\n",
     "    return frame\n",
     "cv2.imshow(\"original_image_stitched_crop.jpg\", trim(dst))\n",
-    "#cv2.imsave(\"original_image_stitched_crop.jpg\", trim(dst))\n",
-    "cv2.waitKey(0)"
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
